--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="mt-8 text-center">
-            <a href="/src/pages/news-full.html"
+            <a href="/news-full"
                 class="inline-flex items-center gap-4 text-white border border-white/10 px-10 py-5 uppercase text-[10px] font-black tracking-[0.2em] hover:bg-white hover:text-black hover:border-white transition-all group">
                 <span data-i18n="news.all_news_btn">Усе навіны</span>
                 <i class="fa-solid fa-arrow-right group-hover:translate-x-1 transition-transform"></i>
