final: solid structure with direct html links and fixed navigation

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,11 +17,11 @@
             </p>
 
             <div class="flex flex-col md:flex-row flex-wrap gap-2 md:gap-4">
-                <a href="/#volunteers" data-i18n="hero.btn_get_help"
+                <a href="/index.html#volunteers" data-i18n="hero.btn_get_help"
                     class="js-nav-link bg-red-600 text-white px-6 py-3 md:px-4 md:py-2 xl:px-8 xl:py-3 uppercase font-black tracking-widest text-[12px] md:text-[13px] xl:text-[14px] hover:bg-white hover:text-black transition-all text-center w-full md:w-auto">
                     Атрымаць дапамогу
                 </a>
-                <a href="/#donate" data-i18n="nav.support"
+                <a href="/index.html#donate" data-i18n="nav.support"
                     class="js-nav-link bg-red-600 text-white px-6 py-3 md:px-4 md:py-2 xl:px-8 xl:py-3 uppercase font-black tracking-widest text-[12px] md:text-[13px] xl:text-[14px] hover:bg-white hover:text-black transition-all cursor-pointer text-center w-full md:w-auto">
                     Падтрымаць
                 </a>
