--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -55,7 +55,7 @@
         </a>
 
         <div class="flex items-center gap-4 md:gap-8">
-            <a href="/#hero" id="home-link"
+            <a href="/index.html#hero" id="home-link"
                 class="js-nav-link text-white hover:text-red-600 transition-all duration-300 opacity-0 translate-x-5 pointer-events-none">
                 <i class="fa-solid fa-house text-xl md:text-2xl"></i>
             </a>
@@ -64,7 +64,7 @@
                 class="hidden xl:flex items-center space-x-10 uppercase text-[13px] font-black tracking-widest text-white italic">
                 <div class="flex items-center gap-x-8">
                     <div class="group relative py-4">
-                        <a href="/#about"
+                        <a href="/index.html#about"
                             class="js-nav-link hover:text-red-600 transition-colors flex items-center gap-1 whitespace-nowrap">
                             <span data-i18n="nav.about">Пра фонд</span>
                             <i
@@ -72,47 +72,47 @@
                         </a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#050505] border border-white/10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
-                            <a href="/projects" data-i18n="nav.projects"
+                            <a href="/pages/projects.html" data-i18n="nav.projects"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Праекты</a>
-                            <a href="/history" data-i18n="nav.history_long"
+                            <a href="/pages/history.html" data-i18n="nav.history_long"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Гістарычны
                                 экскурс</a>
-                            <a href="/reports" data-i18n="nav.reports"
+                            <a href="/pages/reports.html" data-i18n="nav.reports"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Справаздачы</a>
-                            <a href="/materials" data-i18n="nav.materials"
+                            <a href="/pages/materials.html" data-i18n="nav.materials"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Матэрыялы</a>
-                            <a href="/contacts" data-i18n="nav.requisites"
+                            <a href="/pages/contacts.html" data-i18n="nav.requisites"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Рэквізіты</a>
-                            <a href="/zarok-vajara" data-i18n="nav.vow"
+                            <a href="/pages/zarok-vajara.html" data-i18n="nav.vow"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Зарок
                                 ваяра</a>
-                            <a href="/gallery" data-i18n="nav.gallery"
+                            <a href="/pages/gallery.html" data-i18n="nav.gallery"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Галерэя</a>
                         </div>
                     </div>
 
-                    <a href="/#news" data-i18n="nav.news"
+                    <a href="/index.html#news" data-i18n="nav.news"
                         class="js-nav-link hover:text-red-600 transition-colors">Навіны</a>
 
                     <div class="group relative py-4">
-                        <a href="/#volunteers" class="js-nav-link hover:text-red-600 flex items-center gap-1">
+                        <a href="/index.html#volunteers" class="js-nav-link hover:text-red-600 flex items-center gap-1">
                             <span data-i18n="nav.help">Дапамога</span>
                             <i
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i>
                         </a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#050505] border border-white/10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
-                            <a href="/get-help" data-i18n="nav.get_help"
+                            <a href="/pages/get-help.html" data-i18n="nav.get_help"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Атрымаць
                                 дапамогу</a>
-                            <a href="/donate" data-i18n="nav.be_partner"
+                            <a href="/pages/donate.html" data-i18n="nav.be_partner"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Дапамагчы
                                 | Стаць партнёрам</a>
                         </div>
                     </div>
                 </div>
 
-                <a href="/#donate" data-i18n="nav.support"
+                <a href="/index.html#donate" data-i18n="nav.support"
                     class="js-nav-link bg-red-600 text-white px-8 py-2.5 hover:bg-white hover:text-black transition-all">Падтрымаць</a>
             </nav>
 
