--- a/src/partials/donate-section.html
+++ b/src/partials/donate-section.html
@@ -52,13 +52,12 @@
                 <div class="relative z-10 flex flex-col flex-grow">
                     <h3 data-i18n="donate.help_soldiers"
                         class="text-2xl md:text-3xl font-black text-white uppercase italic mb-6 tracking-tighter group-hover:text-red-600 transition-colors min-h-[3.5rem] md:min-h-[4.5rem] flex items-center">
-                        Дапамога байцам
+                        Падтрымаць байцоў
                     </h3>
 
                     <p data-i18n="donate.help_soldiers_text"
                         class="text-gray-400 text-sm md:text-base mb-10 max-w-sm font-light leading-relaxed italic flex-grow">
-                        Наўпроставая закупка рыштунку, медыцыны і тэхнічных сродкаў для беларускіх добраахвотнікаў на
-                        фронце.
+                        Легалізацыя, юрыдычная, псіхалагічная дапамога і сацыяльная рэабілітацыя
                     </p>
 
                     <div
