--- a/src/partials/volunteers.html
+++ b/src/partials/volunteers.html
@@ -80,8 +80,7 @@
 
                     <div id="help-step-4" class="opacity-40 pointer-events-none transition-all duration-500">
                         <input type="text" name="user_contact" data-i18n="[placeholder]volunteers.contact_placeholder"
-                            placeholder="Telegram @user або email" required
-                            pattern="(@[A-Za-z0-9_]{4,}|^[^\s@]+@[^\s@]+\.[^\s@]+$|\+?[0-9]{7,20})"
+                            placeholder="Telegram/Signal(@user) або Phone(+38..)" required
                             class="w-full bg-black border border-white/10 p-4 text-white text-sm outline-none focus:border-red-600 transition-all font-medium">
                     </div>
 
