--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -27,21 +27,21 @@
                                 <span data-i18n="nav.about">Пра фонд</span>
                             </a>
                             <div class="static w-full bg-[#050505] border border-white/5 mt-1">
-                                <a href="/projects" data-i18n="nav.projects"
+                                <a href="/pages/projects.html" data-i18n="nav.projects"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Праекты</a>
-                                <a href="/history" data-i18n="nav.history_long"
+                                <a href="/pages/history.html" data-i18n="nav.history_long"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Гістарычны
                                     экскурс</a>
-                                <a href="/reports" data-i18n="nav.reports"
+                                <a href="/pages/reports.html" data-i18n="nav.reports"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Справаздачы</a>
-                                <a href="/materials" data-i18n="nav.materials"
+                                <a href="/pages/materials.html" data-i18n="nav.materials"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Матэрыялы</a>
-                                <a href="/contacts" data-i18n="nav.requisites"
+                                <a href="/pages/contacts.html" data-i18n="nav.requisites"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Рэквізіты</a>
-                                <a href="/zarok-vajara" data-i18n="nav.vow"
+                                <a href="/pages/zarok-vajara.html" data-i18n="nav.vow"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Зарок
                                     ваяра</a>
-                                <a href="/gallery" data-i18n="nav.gallery"
+                                <a href="/pages/gallery.html" data-i18n="nav.gallery"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Галерэя</a>
                             </div>
                         </div>
@@ -54,10 +54,10 @@
                                 <span data-i18n="nav.help">Дапамога</span>
                             </a>
                             <div class="static w-full bg-[#050505] border border-white/5 mt-1">
-                                <a href="/get-help" data-i18n="nav.get_help"
+                                <a href="/pages/get-help.html" data-i18n="nav.get_help"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Атрымаць
                                     дапамогу</a>
-                                <a href="/donate" data-i18n="nav.be_partner"
+                                <a href="/pages/donate.html" data-i18n="nav.be_partner"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Дапамагчы
                                     | Стаць партнёрам</a>
                             </div>
